--- a/RandomNumberGenerator/Views/Home/Index.cshtml
+++ b/RandomNumberGenerator/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +8,10 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<form asp-action="Index" method="post">
+    <div>
+        <button type="submit" value=""></button>
+        <button type="submit" value="">random2</button>
+    </div>
+</form>
