--- a/RandomNumberGenerator/wwwroot/css/randomNumber.css
+++ b/RandomNumberGenerator/wwwroot/css/randomNumber.css
@@ -1,6 +1,6 @@
 ﻿.number-field {
     display:inline-block;
-    width: 49%;
+    width: 24%;
     padding:10px
 }
 
@@ -12,6 +12,8 @@ input {
     color: #3e3e3e;
 }
 
-.result-field{
-    
+.result-field {
+    display: inline-block;
+    width: 49%;
+    padding: 10px
 }
