--- a/RandomNumberGenerator/Views/Home/Index.cshtml
+++ b/RandomNumberGenerator/Views/Home/Index.cshtml
@@ -16,36 +16,36 @@
 <div style="margin-bottom:10px;">
     <div class="number-field">
         <div>
-            <input asp-for="Number1" />
+            <input readonly asp-for="Number1" />
         </div>
         <div>
-            <button type="submit" readonly id="number1Btn" class="btn btn-info btn-block">Add the number</button>
-        </div>
-    </div>
-
-    <div class="number-field">
-        <div>
-            <input asp-for="Number2" />
-        </div>
-        <div>
-            <button type="submit" readonly id="number2Btn" class="btn btn-info btn-block">Add the number</button>
-        </div>
-    </div>
-    <div class="number-field">
-        <div>
-            <input asp-for="Number3" />
-        </div>
-        <div>
-            <button type="submit" readonly id="number3Btn" class="btn btn-info btn-block">Add the number</button>
+            <button type="submit" id="number1Btn" class="btn btn-info btn-block">Add the number</button>
         </div>
     </div>
 
     <div class="number-field">
         <div>
-            <input asp-for="Number4" />
+            <input readonly asp-for="Number2" />
         </div>
         <div>
-            <button type="submit" readonly id="number4Btn" class="btn btn-info btn-block">Add the number</button>
+            <button type="submit" id="number2Btn" class="btn btn-info btn-block">Add the number</button>
+        </div>
+    </div>
+    <div class="number-field">
+        <div>
+            <input readonly asp-for="Number3" />
+        </div>
+        <div>
+            <button type="submit" id="number3Btn" class="btn btn-info btn-block">Add the number</button>
+        </div>
+    </div>
+
+    <div class="number-field">
+        <div>
+            <input readonly asp-for="Number4" />
+        </div>
+        <div>
+            <button type="submit" id="number4Btn" class="btn btn-info btn-block">Add the number</button>
         </div>
     </div>
 </div>
@@ -62,6 +62,8 @@
         <input readonly asp-for="Target" />
     </div>
 </div>
+<button type="submit" readonly id="resetBtn" class="btn btn-secondary btn-block">Reset result</button>
+
 
 
 
