NEW ROUNDボタンを作成 ajaxのdataType='Json'にすると、C#でシリアライズしたJsonデータをわざわざJS側でデシリアライズしなくても連想配列としてデータが取り出せるようになる

--- a/RandomNumberGenerator/Views/Home/Index.cshtml
+++ b/RandomNumberGenerator/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
             <input readonly asp-for="Target" />
         </div>
         <div class="col-xl-12">
-            <button type="submit" readonly id="resetBtn" class="btn btn-secondary btn-block">Reset result</button>
+            <button type="submit" readonly id="resetBtn" class="btn btn-secondary btn-block">NEW ROUND</button>
         </div>
     </div>
 </div>
