ランダムナンバーの初期化メソッドを作成

--- a/RandomNumberGenerator/Views/Home/Index.cshtml
+++ b/RandomNumberGenerator/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 <input readonly asp-for="Number1" />
             </div>
             <div>
-                <button type="submit" id="number1Btn" class="btn btn-info btn-block">Add the number</button>
+                <button type="submit" id="number1Btn" class="btn btn-info btn-block">Add a number</button>
             </div>
         </div>
 
@@ -29,7 +29,7 @@
                 <input readonly asp-for="Number2" />
             </div>
             <div>
-                <button type="submit" id="number2Btn" class="btn btn-info btn-block">Add the number</button>
+                <button type="submit" id="number2Btn" class="btn btn-info btn-block">Add a number</button>
             </div>
         </div>
         <div class="number-field col-xl-3">
@@ -37,7 +37,7 @@
                 <input readonly asp-for="Number3" />
             </div>
             <div>
-                <button type="submit" id="number3Btn" class="btn btn-info btn-block">Add the number</button>
+                <button type="submit" id="number3Btn" class="btn btn-info btn-block">Add a number</button>
             </div>
         </div>
 
@@ -46,12 +46,11 @@
                 <input readonly asp-for="Number4" />
             </div>
             <div>
-                <button type="submit" id="number4Btn" class="btn btn-info btn-block">Add the number</button>
+                <button type="submit" id="number4Btn" class="btn btn-info btn-block">Add a number</button>
             </div>
         </div>
     </div>
 </div>
-
 
 <div class="container">
     <div class="row">
