successとfailの回数をカウントできる機能を追加

--- a/RandomNumberGenerator/Views/Home/Index.cshtml
+++ b/RandomNumberGenerator/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 <input readonly asp-for="Number1" />
             </div>
             <div>
-                <button type="submit" id="number1Btn" class="btn btn-info btn-block">Add a number</button>
+                <button type="submit" id="number1Btn" class="btn btn-info btn-block addBtn">Add a number</button>
             </div>
         </div>
 
@@ -29,7 +29,7 @@
                 <input readonly asp-for="Number2" />
             </div>
             <div>
-                <button type="submit" id="number2Btn" class="btn btn-info btn-block">Add a number</button>
+                <button type="submit" id="number2Btn" class="btn btn-info btn-block addBtn">Add a number</button>
             </div>
         </div>
         <div class="number-field col-xl-3">
@@ -37,7 +37,7 @@
                 <input readonly asp-for="Number3" />
             </div>
             <div>
-                <button type="submit" id="number3Btn" class="btn btn-info btn-block">Add a number</button>
+                <button type="submit" id="number3Btn" class="btn btn-info btn-block addBtn">Add a number</button>
             </div>
         </div>
 
@@ -46,7 +46,7 @@
                 <input readonly asp-for="Number4" />
             </div>
             <div>
-                <button type="submit" id="number4Btn" class="btn btn-info btn-block">Add a number</button>
+                <button type="submit" id="number4Btn" class="btn btn-info btn-block addBtn">Add a number</button>
             </div>
         </div>
     </div>
@@ -54,14 +54,24 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xl-6">
+        <div class="col-xl-3">
             <h5>RESULT</h5>
             <input readonly asp-for="Result" />
         </div>
-        <div class="col-xl-6">
+        <div class="col-xl-3">
             <h5>TARGET</h5>
             <input readonly asp-for="Target" />
         </div>
+        <div class="col-xl-3">
+            <h5>SUCCESS</h5>
+            <span id="success">0</span>
+        </div>
+        <div class="col-xl-3">
+            <h5>FAIL</h5>
+            <span id="fail">0</span>
+        </div>
+
+
         <div class="col-xl-12">
             <button type="submit" readonly id="resetBtn" class="btn btn-secondary btn-block">NEW ROUND</button>
         </div>
